--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -3,9 +3,27 @@ services:
     image: jupyter/pyspark-notebook:latest
     container_name: jupyter_lab
     ports:
-      - "8888:8888"          # Accès depuis le navigateur
+      - "${LOCALHOST_JUPYTER_PORT}:${JUPYTER_PORT}"          # Accès depuis le navigateur
     volumes:
       - ./notebooks:/home/jovyan/work   # Synchronisation avec le dossier local
-    environment:
-      - JUPYTER_ENABLE_LAB=yes          # Lance Jupyter Lab par défaut
+      - ./producer:/home/jovyan/src 
+    env_file:
+      - .env
     restart: unless-stopped
+
+  zookeeper:
+    image: confluentinc/cp-zookeeper:7.5.0
+    environment:
+      ZOOKEEPER_CLIENT_PORT: ${ZOOKEEPER_CLIENT_PORT}
+  
+  kafka:
+    image: confluentinc/cp-kafka:7.5.0
+    depends_on:
+      - zookeeper
+    ports:
+      - "${LOCALHOST_KAFKA_PORT}:${KAFKA_PORT}"
+    environment:
+      KAFKA_ZOOKEEPER_CONNECT: "${KAFKA_ZOOKEEPER_CONNECT}"
+      KAFKA_LISTENERS: "${KAFKA_LISTENERS}"
+      KAFKA_ADVERTISED_LISTENERS: "${KAFKA_ADVERTISED_LISTENERS}"
+      KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: "${KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR}"
