trying to make spark work

--- a/.env.template
+++ b/.env.template
@@ -16,3 +16,12 @@ KAFKA_ZOOKEEPER_CONNECT=
 KAFKA_LISTENERS=
 KAFKA_ADVERTISED_LISTENERS=
 KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR=1
+
+
+LOCALHOST_SPARK_MASTER_PORT=
+SPARK_MASTER_PORT=
+
+SPARK_MASTER_URL=
+
+LOCALHOST_SPARK_UI_PORT=
+SPARK_UI_PORT=
